# learn-fast

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
learn_fast/: __init__.py  lesson_planner.py  podcaster.py
