[tool.poetry]
name = "learn-fast"
version = "0.1.0"
description = ""
authors = ["Joe Hsu <jhsu.x1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.3.5"
elevenlabs = "^0.2.26"
python-dotenv = "^1.0.0"
ruff = "^0.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
